[gd_scene load_steps=9 format=3 uid="uid://cbybw6prbm7bg"]

[ext_resource type="Script" path="res://mechanics/interaction/Inspectable.gd" id="1_6wfsi"]
[ext_resource type="PackedScene" uid="uid://dhrxgoepnje2n" path="res://mechanics/interaction/Interactable.tscn" id="2_e8soa"]
[ext_resource type="AudioStream" uid="uid://hh4j3bc5d6t4" path="res://Detect Test Sound.wav" id="3_orxuh"]

[sub_resource type="BoxMesh" id="BoxMesh_rwp1l"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q22l6"]
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_ra4r6"]
_surfaces = [{
"aabb": AABB(-0.514434, -0.514434, -0.514434, 1.02887, 1.02888, 1.02888),
"attribute_data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 171, 170, 42, 63, 0, 0, 0, 0, 171, 170, 170, 62, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 63, 171, 170, 42, 63, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 63, 171, 170, 42, 63, 0, 0, 0, 0, 171, 170, 170, 62, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 128, 63, 171, 170, 170, 62, 0, 0, 0, 63, 171, 170, 42, 63, 0, 0, 0, 63, 171, 170, 42, 63, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63),
"format": 4119,
"index_count": 36,
"index_data": PackedByteArray(0, 0, 4, 0, 2, 0, 2, 0, 4, 0, 6, 0, 1, 0, 5, 0, 3, 0, 3, 0, 5, 0, 7, 0, 8, 0, 12, 0, 10, 0, 10, 0, 12, 0, 14, 0, 9, 0, 13, 0, 11, 0, 11, 0, 13, 0, 15, 0, 16, 0, 20, 0, 18, 0, 18, 0, 20, 0, 22, 0, 17, 0, 21, 0, 19, 0, 19, 0, 21, 0, 23, 0),
"primitive": 3,
"vertex_count": 24,
"vertex_data": PackedByteArray(238, 177, 3, 191, 238, 177, 3, 63, 238, 177, 3, 63, 255, 127, 255, 127, 255, 255, 255, 191, 238, 177, 3, 63, 238, 177, 3, 63, 238, 177, 3, 191, 255, 255, 255, 255, 0, 0, 255, 191, 238, 177, 3, 63, 238, 177, 3, 63, 238, 177, 3, 63, 255, 127, 255, 127, 255, 255, 255, 191, 238, 177, 3, 191, 238, 177, 3, 63, 238, 177, 3, 191, 255, 255, 255, 255, 0, 0, 255, 191, 238, 177, 3, 191, 238, 177, 3, 191, 238, 177, 3, 63, 255, 127, 255, 127, 255, 255, 255, 191, 238, 177, 3, 63, 238, 177, 3, 191, 238, 177, 3, 191, 255, 255, 255, 255, 0, 0, 255, 191, 238, 177, 3, 63, 238, 177, 3, 191, 238, 177, 3, 63, 255, 127, 255, 127, 255, 255, 255, 191, 238, 177, 3, 191, 238, 177, 3, 191, 238, 177, 3, 191, 255, 255, 255, 255, 0, 0, 255, 191, 238, 177, 3, 63, 238, 177, 3, 63, 238, 177, 3, 63, 255, 255, 0, 128, 255, 255, 255, 255, 238, 177, 3, 191, 238, 177, 3, 63, 238, 177, 3, 191, 0, 0, 0, 128, 255, 127, 255, 191, 238, 177, 3, 63, 238, 177, 3, 63, 238, 177, 3, 191, 255, 255, 0, 128, 255, 255, 255, 255, 238, 177, 3, 191, 238, 177, 3, 63, 238, 177, 3, 63, 0, 0, 0, 128, 255, 127, 255, 191, 238, 177, 3, 63, 238, 177, 3, 191, 238, 177, 3, 63, 255, 255, 0, 128, 255, 255, 255, 255, 238, 177, 3, 191, 238, 177, 3, 191, 238, 177, 3, 191, 0, 0, 0, 128, 255, 127, 255, 191, 238, 177, 3, 63, 238, 177, 3, 191, 238, 177, 3, 191, 255, 255, 0, 128, 255, 255, 255, 255, 238, 177, 3, 191, 238, 177, 3, 191, 238, 177, 3, 63, 0, 0, 0, 128, 255, 127, 255, 191, 238, 177, 3, 63, 238, 177, 3, 63, 238, 177, 3, 63, 0, 128, 255, 255, 0, 0, 255, 191, 238, 177, 3, 191, 238, 177, 3, 191, 238, 177, 3, 63, 0, 128, 0, 0, 255, 255, 255, 191, 238, 177, 3, 191, 238, 177, 3, 63, 238, 177, 3, 63, 0, 128, 255, 255, 0, 0, 255, 191, 238, 177, 3, 63, 238, 177, 3, 191, 238, 177, 3, 63, 0, 128, 0, 0, 255, 255, 255, 191, 238, 177, 3, 63, 238, 177, 3, 63, 238, 177, 3, 191, 0, 128, 255, 255, 0, 0, 255, 191, 238, 177, 3, 191, 238, 177, 3, 191, 238, 177, 3, 191, 0, 128, 0, 0, 255, 255, 255, 191, 238, 177, 3, 191, 238, 177, 3, 63, 238, 177, 3, 191, 0, 128, 255, 255, 0, 0, 255, 191, 238, 177, 3, 63, 238, 177, 3, 191, 238, 177, 3, 191, 0, 128, 0, 0, 255, 255, 255, 191)
}]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5v361"]
emission_enabled = true
emission = Color(1, 1, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_bvwgn"]

[node name="Inspectable" type="RigidBody3D"]
collision_layer = 3
collision_mask = 3
gravity_scale = 0.0
script = ExtResource("1_6wfsi")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_rwp1l")
surface_material_override/0 = SubResource("StandardMaterial3D_q22l6")

[node name="Outline" type="MeshInstance3D" parent="MeshInstance3D"]
visible = false
mesh = SubResource("ArrayMesh_ra4r6")
surface_material_override/0 = SubResource("StandardMaterial3D_5v361")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_bvwgn")

[node name="Interactable" parent="." instance=ExtResource("2_e8soa")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -959.5
offset_top = -1082.0
offset_right = 959.5
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 924.0
offset_top = 938.0
offset_right = 1012.0
offset_bottom = 964.0
text = "Inspect? [E]"
horizontal_alignment = 1
vertical_alignment = 2

[node name="TriggerSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_orxuh")

[connection signal="cancel" from="Interactable" to="." method="_on_interactable_cancel"]
[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]

[editable path="Interactable"]
